@@ -1,8 +1,8 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.6-r1.ebuild,v 1.2 2004/04/07 11:03:36 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.6-r1.ebuild,v 1.3 2004/04/27 21:56:16 agriffis Exp $
 
-inherit gnome2
+inherit gnome2 eutils
 
 DESCRIPTION="Lightweight Jabber client for GNOME"
 HOMEPAGE="http://www.imendio.com/projects/gossip/"
