@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.6.ebuild,v 1.2 2003/12/07 15:43:52 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.6.ebuild,v 1.3 2004/04/27 21:56:16 agriffis Exp $
 
 inherit gnome2
 
