@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.13 2004/04/09 15:03:45 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.14 2004/04/27 21:56:16 agriffis Exp $
+
+  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gossip-0.6-r1.ebuild:
+  Add inherit eutils
 
   09 Apr 2004; David Holm <dholm@gentoo.org> gossip-0.7.4.ebuild:
   Added to ~ppc.
